--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="esp">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
         <div class="jumbotron text-center">
             <h1 class="display-4">Bienvenidos a Cafetería XYZ</h1>
             <p class="lead">¡La mejor cafetería de la ciudad!</p>
-            <img src="https://source.unsplash.com/random/200x200?coffee" />
+            <img src="https://source.unsplash.com/random/200x200?coffee" alt="imagen cafe"/>
             <hr class="my-4">
             <p>Horario de apertura: Lunes a Viernes, 8:00 AM - 6:00 PM</p>
         </div>
@@ -33,6 +33,7 @@
                     <h6>Contacto</h6>
                     <form action="#" method="post">
                         <div class="form-group">
+                            <label for="nombre">Nombre</label>
                             <input type="text" class="form-control" id="nombre" placeholder="Nombre">
                         </div>
                         <div class="form-group">
